--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
 OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE." />
 <link id="faviconLink" rel="shortcut icon" href="favicon.ico">
-<title>record of sn2000 — system log since the great earth quake</title>
+<title>record of dragonsn — system log since the great earth quake</title>
 <!--~~ This is a Tiddlywiki file. The points of interest in the file are marked with this pattern ~~-->
 
 <!--~~ Raw markup ~~-->
@@ -153,11 +153,29 @@ Error message and password prompt
 
 <li>$:/state/image-picker/system--1245101053</li>
 
+<li>$:/state/tab--1963855381</li>
+
+<li>$:/state/tab--2112689675</li>
+
+<li>$:/state/tab--86143343</li>
+
+<li>$:/state/tab--959111941</li>
+
+<li>$:/state/tab-1749438307</li>
+
+<li>$:/state/tab-2065006209</li>
+
+<li>$:/state/tab/moresidebar-1850697562</li>
+
 <li>$:/state/tab/sidebar--595412856</li>
+
+<li>$:/status/UserName</li>
 
 <li>$:/StoryList</li>
 
 <li>$:/temp/info-plugin</li>
+
+<li>$:/temp/search</li>
 
 <li>$:/themes/tiddlywiki/snowwhite</li>
 
@@ -9368,8 +9386,8 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20200131121557078" modified="20200131121602358" title="$:/DefaultTiddlers">
-<pre>first of first
+<div created="20200131121557078" creator="dragonsn" modified="20200131123518087" modifier="dragonsn" title="$:/DefaultTiddlers">
+<pre>[[first day]]
 </pre>
 </div>
 <div title="$:/isEncrypted">
@@ -9378,16 +9396,40 @@ Error message and password prompt
 <div created="20200131121524086" modified="20200131121549543" title="$:/SiteSubtitle">
 <pre>system log since the great earth quake</pre>
 </div>
-<div created="20200131121506022" modified="20200131121519382" title="$:/SiteTitle">
-<pre>record of sn2000</pre>
+<div created="20200131121506022" modified="20200131123157734" title="$:/SiteTitle">
+<pre>record of dragonsn</pre>
 </div>
 <div created="20200131121930566" modified="20200131121930566" title="$:/state/image-picker/system--1245101053">
 <pre>show</pre>
 </div>
-<div created="20200131121817854" modified="20200131121823893" title="$:/state/tab/sidebar--595412856">
-<pre>$:/core/ui/SideBar/More</pre>
+<div created="20200131123248439" modified="20200131123254663" title="$:/state/tab--1963855381">
+<pre>$:/themes/tiddlywiki/vanilla/themetweaks</pre>
 </div>
-<div created="20200131121948158" list="[[first day]]" modified="20200131121948158" title="$:/StoryList">
+<div created="20200131123233015" modified="20200131123449487" title="$:/state/tab--2112689675">
+<pre>$:/core/ui/ControlPanel/Basics</pre>
+</div>
+<div created="20200131123350039" modified="20200131123350911" title="$:/state/tab--86143343">
+<pre>$:/core/ui/ControlPanel/Plugins/Installed/Languages</pre>
+</div>
+<div created="20200131123237175" modified="20200131123448920" title="$:/state/tab--959111941">
+<pre>$:/core/ui/ControlPanel/LoadedModules</pre>
+</div>
+<div created="20200131123206206" modified="20200131123445495" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Info</pre>
+</div>
+<div created="20200131123307952" modified="20200131123340327" title="$:/state/tab-2065006209">
+<pre>$:/core/ui/ControlPanel/Saving/TiddlySpot</pre>
+</div>
+<div created="20200131123134990" modified="20200131123412559" title="$:/state/tab/moresidebar-1850697562">
+<pre>$:/core/ui/MoreSideBar/All</pre>
+</div>
+<div created="20200131121817854" modified="20200131123431303" title="$:/state/tab/sidebar--595412856">
+<pre>$:/core/ui/SideBar/Open</pre>
+</div>
+<div created="20200131123502121" modified="20200131123502121" title="$:/status/UserName">
+<pre>dragonsn</pre>
+</div>
+<div created="20200131123148511" list="$:/ControlPanel" modified="20200131123148511" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9403,19 +9445,19 @@ Error message and password prompt
         },
         &quot;$:/info/url/full&quot;: {
             &quot;title&quot;: &quot;$:/info/url/full&quot;,
-            &quot;text&quot;: &quot;file:///C:/Users/usershen/Downloads/sn.html&quot;
+            &quot;text&quot;: &quot;https://dragonsn.github.io/&quot;
         },
         &quot;$:/info/url/host&quot;: {
             &quot;title&quot;: &quot;$:/info/url/host&quot;,
-            &quot;text&quot;: &quot;&quot;
+            &quot;text&quot;: &quot;dragonsn.github.io&quot;
         },
         &quot;$:/info/url/hostname&quot;: {
             &quot;title&quot;: &quot;$:/info/url/hostname&quot;,
-            &quot;text&quot;: &quot;&quot;
+            &quot;text&quot;: &quot;dragonsn.github.io&quot;
         },
         &quot;$:/info/url/protocol&quot;: {
             &quot;title&quot;: &quot;$:/info/url/protocol&quot;,
-            &quot;text&quot;: &quot;file:&quot;
+            &quot;text&quot;: &quot;https:&quot;
         },
         &quot;$:/info/url/port&quot;: {
             &quot;title&quot;: &quot;$:/info/url/port&quot;,
@@ -9423,7 +9465,7 @@ Error message and password prompt
         },
         &quot;$:/info/url/pathname&quot;: {
             &quot;title&quot;: &quot;$:/info/url/pathname&quot;,
-            &quot;text&quot;: &quot;/C:/Users/usershen/Downloads/sn.html&quot;
+            &quot;text&quot;: &quot;/&quot;
         },
         &quot;$:/info/url/search&quot;: {
             &quot;title&quot;: &quot;$:/info/url/search&quot;,
@@ -9431,7 +9473,7 @@ Error message and password prompt
         },
         &quot;$:/info/url/origin&quot;: {
             &quot;title&quot;: &quot;$:/info/url/origin&quot;,
-            &quot;text&quot;: &quot;file://&quot;
+            &quot;text&quot;: &quot;https://dragonsn.github.io&quot;
         },
         &quot;$:/info/browser/screen/width&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/width&quot;,
@@ -9447,6 +9489,9 @@ Error message and password prompt
         }
     }
 }</pre>
+</div>
+<div created="20200131123414728" modified="20200131123421399" title="$:/temp/search">
+<pre>first</pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-priority="0" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.21">
 <pre>{
