--- a/index.html
+++ b/index.html
@@ -145,6 +145,14 @@ Error message and password prompt
 
 <li>$:/DefaultTiddlers</li>
 
+<li>$:/GitHub/Filename</li>
+
+<li>$:/GitHub/Path</li>
+
+<li>$:/GitHub/Repo</li>
+
+<li>$:/GitHub/Username</li>
+
 <li>$:/isEncrypted</li>
 
 <li>$:/SiteSubtitle</li>
@@ -9390,6 +9398,18 @@ Error message and password prompt
 <pre>[[first day]]
 </pre>
 </div>
+<div created="20200131130449702" creator="dragonsn" modified="20200131130451203" modifier="dragonsn" title="$:/GitHub/Filename">
+<pre>index.html</pre>
+</div>
+<div created="20200131130443615" creator="dragonsn" modified="20200131130443615" modifier="dragonsn" title="$:/GitHub/Path">
+<pre>/</pre>
+</div>
+<div created="20200131130432481" creator="dragonsn" modified="20200131130432481" modifier="dragonsn" title="$:/GitHub/Repo">
+<pre>dragonsn/dragonsn.github.io</pre>
+</div>
+<div created="20200131130211217" creator="dragonsn" modified="20200131130214157" modifier="dragonsn" title="$:/GitHub/Username">
+<pre>dragonsn</pre>
+</div>
 <div title="$:/isEncrypted">
 <pre>no</pre>
 </div>
@@ -9414,11 +9434,11 @@ Error message and password prompt
 <div created="20200131123237175" modified="20200131123448920" title="$:/state/tab--959111941">
 <pre>$:/core/ui/ControlPanel/LoadedModules</pre>
 </div>
-<div created="20200131123206206" modified="20200131123445495" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Info</pre>
+<div created="20200131123206206" creator="dragonsn" modified="20200131130206187" modifier="dragonsn" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Saving</pre>
 </div>
-<div created="20200131123307952" modified="20200131123340327" title="$:/state/tab-2065006209">
-<pre>$:/core/ui/ControlPanel/Saving/TiddlySpot</pre>
+<div created="20200131123307952" creator="dragonsn" modified="20200131130208755" modifier="dragonsn" title="$:/state/tab-2065006209">
+<pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
 </div>
 <div created="20200131123134990" modified="20200131123412559" title="$:/state/tab/moresidebar-1850697562">
 <pre>$:/core/ui/MoreSideBar/All</pre>
@@ -9429,7 +9449,7 @@ Error message and password prompt
 <div created="20200131123502121" modified="20200131123502121" title="$:/status/UserName">
 <pre>dragonsn</pre>
 </div>
-<div created="20200131123148511" list="$:/ControlPanel" modified="20200131123148511" title="$:/StoryList">
+<div created="20200131130203605" creator="dragonsn" list="$:/ControlPanel [[first day]]" modified="20200131130203605" modifier="dragonsn" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9485,7 +9505,7 @@ Error message and password prompt
         },
         &quot;$:/info/browser/language&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/language&quot;,
-            &quot;text&quot;: &quot;zh-CN&quot;
+            &quot;text&quot;: &quot;en-US&quot;
         }
     }
 }</pre>
