--- a/index.html
+++ b/index.html
@@ -189,6 +189,8 @@ Error message and password prompt
 
 <li>$:/themes/tiddlywiki/vanilla</li>
 
+<li>Draft of 'first day' by dragonsn</li>
+
 <li>first day</li>
 
 </ul>
@@ -9449,7 +9451,7 @@ Error message and password prompt
 <div created="20200131123502121" modified="20200131123502121" title="$:/status/UserName">
 <pre>dragonsn</pre>
 </div>
-<div created="20200131130203605" creator="dragonsn" list="$:/ControlPanel [[first day]]" modified="20200131130203605" modifier="dragonsn" title="$:/StoryList">
+<div created="20200131130203605" creator="dragonsn" list="[[Draft of 'first day' by dragonsn]]" modified="20200131130203605" modifier="dragonsn" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9621,6 +9623,24 @@ Error message and password prompt
         }
     }
 }</pre>
+</div>
+<div created="20200131121825159" creator="dragonsn" draft.of="first day" draft.title="first day" modified="20200131131652259" modifier="dragonsn" tags="" title="Draft of 'first day' by dragonsn">
+<pre>[[time has come!]]
+
+! game engine notes
+[[Unreal]]
+[[Unity]]
+
+! other tech notes 
+[[rendering]]
+[[animation]]
+[[physics]]
+[[network]]
+[[server]]
+
+!practices
+[[New| My WIP projects]]
+[[Old | My old projects]]</pre>
 </div>
 <div created="20200131121825159" modified="20200131121945798" tags="" title="first day">
 <pre>[[time has come!]]</pre>
