--- a/index.html
+++ b/index.html
@@ -9449,7 +9449,7 @@ Error message and password prompt
 <div created="20200131123502121" modified="20200131123502121" title="$:/status/UserName">
 <pre>dragonsn</pre>
 </div>
-<div created="20200131130203605" creator="dragonsn" list="[[first day]]" modified="20200131130203605" modifier="dragonsn" title="$:/StoryList">
+<div created="20200131132329976" creator="dragonsn" list="[[first day]]" modified="20200131132329976" modifier="dragonsn" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9505,7 +9505,7 @@ Error message and password prompt
         },
         &quot;$:/info/browser/language&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/language&quot;,
-            &quot;text&quot;: &quot;en-US&quot;
+            &quot;text&quot;: &quot;zh-CN&quot;
         }
     }
 }</pre>
@@ -9622,10 +9622,8 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20200131121825159" creator="dragonsn" modified="20200131131827509" modifier="dragonsn" tags="" title="first day">
-<pre>[[time has come!]]
-
-! game engine notes
+<div created="20200131121825159" creator="dragonsn" modified="20200131132406001" modifier="dragonsn" tags="" title="first day">
+<pre>! game engine notes
 [[Unreal]]
 [[Unity]]
 
@@ -9636,7 +9634,7 @@ Error message and password prompt
 [[network]]
 [[server]]
 
-!practices
+!my practices
 [[New| My WIP projects]]
 [[Old | My old projects]]</pre>
 </div>
