Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -9437,19 +9437,19 @@ Error message and password prompt
 <div created="20200131123206206" creator="dragonsn" modified="20200131130206187" modifier="dragonsn" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Saving</pre>
 </div>
-<div created="20200131123307952" creator="dragonsn" modified="20200131130208755" modifier="dragonsn" title="$:/state/tab-2065006209">
+<div created="20200131123307952" creator="dragonsn" modified="20200131132813543" modifier="dragonsn" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
 </div>
 <div created="20200131123134990" modified="20200131123412559" title="$:/state/tab/moresidebar-1850697562">
 <pre>$:/core/ui/MoreSideBar/All</pre>
 </div>
-<div created="20200131121817854" modified="20200131123431303" title="$:/state/tab/sidebar--595412856">
+<div created="20200131121817854" creator="dragonsn" modified="20200131132808319" modifier="dragonsn" title="$:/state/tab/sidebar--595412856">
 <pre>$:/core/ui/SideBar/Open</pre>
 </div>
 <div created="20200131123502121" modified="20200131123502121" title="$:/status/UserName">
 <pre>dragonsn</pre>
 </div>
-<div created="20200131132329976" creator="dragonsn" list="[[first day]]" modified="20200131132329976" modifier="dragonsn" title="$:/StoryList">
+<div created="20200131132809024" creator="dragonsn" list="$:/ControlPanel [[first day]]" modified="20200131132809024" modifier="dragonsn" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9622,7 +9622,7 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20200131121825159" creator="dragonsn" modified="20200131132406001" modifier="dragonsn" tags="" title="first day">
+<div created="20200131121825159" creator="dragonsn" modified="20200131132744448" modifier="dragonsn" tags="" title="first day">
 <pre>! game engine notes
 [[Unreal]]
 [[Unity]]
@@ -9634,7 +9634,7 @@ Error message and password prompt
 [[network]]
 [[server]]
 
-!my practices
+!practices
 [[New| My WIP projects]]
 [[Old | My old projects]]</pre>
 </div>
