--- a/index.html
+++ b/index.html
@@ -9449,7 +9449,7 @@ Error message and password prompt
 <div created="20200131123502121" modified="20200131123502121" title="$:/status/UserName">
 <pre>dragonsn</pre>
 </div>
-<div created="20200131132809024" creator="dragonsn" list="$:/ControlPanel [[first day]]" modified="20200131132809024" modifier="dragonsn" title="$:/StoryList">
+<div list="[[first day]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9505,7 +9505,7 @@ Error message and password prompt
         },
         &quot;$:/info/browser/language&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/language&quot;,
-            &quot;text&quot;: &quot;zh-CN&quot;
+            &quot;text&quot;: &quot;en-US&quot;
         }
     }
 }</pre>
@@ -9622,7 +9622,7 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20200131121825159" creator="dragonsn" modified="20200131132744448" modifier="dragonsn" tags="" title="first day">
+<div created="20200131121825159" creator="dragonsn" modified="20200131132954044" modifier="dragonsn" tags="" title="first day">
 <pre>! game engine notes
 [[Unreal]]
 [[Unity]]
