Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -189,6 +189,8 @@ Error message and password prompt
 
 <li>$:/themes/tiddlywiki/vanilla</li>
 
+<li>dragonsn</li>
+
 <li>first day</li>
 
 </ul>
@@ -9449,7 +9451,7 @@ Error message and password prompt
 <div created="20200131123502121" modified="20200131123502121" title="$:/status/UserName">
 <pre>dragonsn</pre>
 </div>
-<div list="[[first day]]" title="$:/StoryList">
+<div created="20200131133147711" creator="dragonsn" list="[[first day]] dragonsn" modified="20200131133147711" modifier="dragonsn" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9622,7 +9624,10 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20200131121825159" creator="dragonsn" modified="20200131132954044" modifier="dragonsn" tags="" title="first day">
+<div created="20200131133153608" creator="dragonsn" modified="20200131133159919" modifier="dragonsn" title="dragonsn">
+<pre>code name:2000</pre>
+</div>
+<div created="20200131121825159" creator="dragonsn" modified="20200131132744448" modifier="dragonsn" tags="" title="first day">
 <pre>! game engine notes
 [[Unreal]]
 [[Unity]]
