Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -167,6 +167,8 @@ Error message and password prompt
 
 <li>$:/state/image-picker/system--1245101053</li>
 
+<li>$:/state/image-picker/system-1300239903</li>
+
 <li>$:/state/tab--1963855381</li>
 
 <li>$:/state/tab--2112689675</li>
@@ -391,9 +393,15 @@ Error message and password prompt
 
 <li>$:/themes/tiddlywiki/vanilla</li>
 
+<li>Draft of 'Unreal' by dragonsn</li>
+
 <li>dragonsn</li>
 
 <li>first day</li>
+
+<li>gv_game_engine</li>
+
+<li>header-only-libs</li>
 
 </ul>
 </p>
@@ -9847,6 +9855,9 @@ Error message and password prompt
 <div created="20200131121930566" modified="20200131121930566" title="$:/state/image-picker/system--1245101053">
 <pre>show</pre>
 </div>
+<div created="20200207084505219" creator="dragonsn" modified="20200207084518275" modifier="dragonsn" title="$:/state/image-picker/system-1300239903">
+<pre>hide</pre>
+</div>
 <div created="20200131123248439" modified="20200131123254663" title="$:/state/tab--1963855381">
 <pre>$:/themes/tiddlywiki/vanilla/themetweaks</pre>
 </div>
@@ -9862,8 +9873,8 @@ Error message and password prompt
 <div created="20200131135404941" creator="dragonsn" modified="20200131135550742" modifier="dragonsn" title="$:/state/tab-1342078386">
 <pre>$:/core/ui/ControlPanel/Plugins/Add/Plugins</pre>
 </div>
-<div created="20200131123206206" creator="dragonsn" modified="20200131135545038" modifier="dragonsn" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Plugins</pre>
+<div created="20200131123206206" creator="dragonsn" modified="20200207092213369" modifier="dragonsn" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Saving</pre>
 </div>
 <div created="20200131123307952" creator="dragonsn" modified="20200131132813543" modifier="dragonsn" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
@@ -9877,7 +9888,7 @@ Error message and password prompt
 <div created="20200131123502121" modified="20200131123502121" title="$:/status/UserName">
 <pre>dragonsn</pre>
 </div>
-<div created="20200131135534833" creator="dragonsn" list="$:/ControlPanel [[first day]]" modified="20200131135534833" modifier="dragonsn" title="$:/StoryList">
+<div created="20200207084415859" creator="dragonsn" list="$:/ControlPanel [[first day]] header-only-libs gv_game_engine [[Draft of 'Unreal' by dragonsn]]" modified="20200207092205321" modifier="dragonsn" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200131135423077" creator="dragonsn" modified="20200131135423077" modifier="dragonsn" title="$:/temp/HidePluginWarning">
@@ -9936,7 +9947,7 @@ Error message and password prompt
         },
         &quot;$:/info/browser/language&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/language&quot;,
-            &quot;text&quot;: &quot;en-US&quot;
+            &quot;text&quot;: &quot;zh-CN&quot;
         }
     }
 }</pre>
@@ -10812,11 +10823,24 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
     }
 }</pre>
 </div>
+<div draft.of="Unreal" draft.title="Unreal" modified="20200207084441636" modifier="dragonsn" title="Draft of 'Unreal' by dragonsn">
+<pre></pre>
+</div>
 <div created="20200131133153608" creator="dragonsn" modified="20200131133159919" modifier="dragonsn" title="dragonsn">
 <pre>code name:2000</pre>
 </div>
-<div created="20200131121825159" creator="dragonsn" modified="20200131132744448" modifier="dragonsn" tags="" title="first day">
-<pre>! game engine notes
+<div created="20200131121825159" creator="dragonsn" modified="20200207085616673" modifier="dragonsn" tags="" title="first day">
+<pre>!Works
+
+[[gv_game_engine]]
+
+[[header-only-libs]]
+
+[[New WIP project | My WIP projects]]
+
+[[Old | My old projects]]
+
+! game engine notes
 [[Unreal]]
 [[Unity]]
 
@@ -10827,9 +10851,14 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 [[network]]
 [[server]]
 
-!practices
-[[New| My WIP projects]]
-[[Old | My old projects]]</pre>
+</pre>
+</div>
+<div created="20200207085644107" creator="dragonsn" modified="20200207085741937" modifier="dragonsn" title="gv_game_engine">
+<pre>a lightweight game engine for prototyping , support PC   and android. IOS WIP</pre>
+</div>
+<div created="20200207085807010" creator="dragonsn" modified="20200207085852412" modifier="dragonsn" title="header-only-libs">
+<pre>some header only  utility can be used independently.
+</pre>
 </div>
 
 </div>
