--- a/index.html
+++ b/index.html
@@ -393,6 +393,8 @@ Error message and password prompt
 
 <li>$:/themes/tiddlywiki/vanilla</li>
 
+<li>Draft of 'first day' by dragonsn</li>
+
 <li>Draft of 'Unreal' by dragonsn</li>
 
 <li>dragonsn</li>
@@ -9888,7 +9890,7 @@ Error message and password prompt
 <div created="20200131123502121" modified="20200131123502121" title="$:/status/UserName">
 <pre>dragonsn</pre>
 </div>
-<div created="20200207084415859" creator="dragonsn" list="$:/ControlPanel [[first day]] header-only-libs gv_game_engine [[Draft of 'Unreal' by dragonsn]]" modified="20200207092205321" modifier="dragonsn" title="$:/StoryList">
+<div list="[[Draft of 'first day' by dragonsn]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200131135423077" creator="dragonsn" modified="20200131135423077" modifier="dragonsn" title="$:/temp/HidePluginWarning">
@@ -10822,6 +10824,37 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
         }
     }
 }</pre>
+</div>
+<div created="20200131121825159" creator="dragonsn" draft.of="first day" draft.title="first day" modified="20200207093916283" modifier="dragonsn" tags="" title="Draft of 'first day' by dragonsn">
+<pre>!Works
+
+[[gv_game_engine]]
+
+[[header-only-libs]]
+
+[[New WIP project | My WIP projects]]
+
+[[Old | My old projects]]
+
+! game engine notes
+
+[[Unreal]]
+
+[[Unity]]
+
+! other tech notes 
+
+[[rendering]]
+
+[[animation]]
+
+[[physics]]
+
+[[network]]
+
+[[server]]
+
+</pre>
 </div>
 <div draft.of="Unreal" draft.title="Unreal" modified="20200207084441636" modifier="dragonsn" title="Draft of 'Unreal' by dragonsn">
 <pre></pre>
